Fix single adventure spacing, asterisk color, add screenshot to readme

--- a/themes/inhabitent-theme/sass/_forms.scss
+++ b/themes/inhabitent-theme/sass/_forms.scss
@@ -107,7 +107,7 @@ label {
 }
 
 .required {
-	color: red;
+	color: $orange-brand;
 }
 
 .wpcf7-not-valid-tip {
