--- a/themes/inhabitent-theme/sass/page-styles/_single-product.scss
+++ b/themes/inhabitent-theme/sass/page-styles/_single-product.scss
@@ -32,6 +32,7 @@
 }
 
 .social-links {
+	padding-bottom: $base__space-unit * 2;
 	&:hover {
 		cursor: pointer;
 	}
